@@ -6,6 +6,13 @@
 ==========更新日志==========
 
 
+==========5.19==========
+2025-2-27
+1. listview增加清空方法
+2. entry中有内容就显示删除按钮
+3. 删除passwordbox输入判定
+4. 优化entry, passwordbox提示符样式(不再支持linew参数)
+
 ==========5.18==========
 2025-2-12
 1. 修复列表选择对话框的尺寸错误问题
